// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArrowButton /> should handle props 1`] = `
<ArrowButton
  aria-label="Назад"
  direction="left"
  onClick={[MockFunction]}
  size="l"
>
  <button
    aria-label="Назад"
    className="arrow-button size-l"
    data-testid="arrow-button"
    onClick={[MockFunction]}
    type="button"
  >
    <ForwardRef(ArrowLeftSVG)
      aria-hidden={true}
      fill="currentColor"
    >
      <svg
        aria-hidden={true}
        fill="currentColor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M5.414 13l5.293 5.293a1 1 0 01-1.414 1.414l-7-7a1 1 0 010-1.414l7-7a1 1 0 011.414 1.414L5.414 11H21a1 1 0 110 2H5.414z"
        />
      </svg>
    </ForwardRef(ArrowLeftSVG)>
  </button>
</ArrowButton>
`;

exports[`<ArrowButton /> should renders correctly 1`] = `
<ArrowButton
  aria-label="Вперед"
>
  <button
    aria-label="Вперед"
    className="arrow-button size-l"
    data-testid="arrow-button"
    type="button"
  >
    <ForwardRef(ArrowRightSVG)
      aria-hidden={true}
      fill="currentColor"
    >
      <svg
        aria-hidden={true}
        fill="currentColor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M12.247 4.342a1 1 0 00.095 1.41L18.338 11H3a1 1 0 100 2h15.339l-5.997 5.247a1 1 0 001.316 1.506l8-7a1 1 0 000-1.506l-8-7a1 1 0 00-1.41.095z"
        />
      </svg>
    </ForwardRef(ArrowRightSVG)>
  </button>
</ArrowButton>
`;
